--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>クールなスロット演出（揃い演出後200ms待機）</title>
+    <title>2A@CasinoSlot</title>
     <style>
         body {
             font-family: "Segoe UI", "Arial", sans-serif;
@@ -182,8 +182,6 @@
                 <div class="reel" id="reel3"></div>
             </div>
         </div>
-        <div class="spin-tip">スペースキーまたは画面タップは「離した瞬間」受付<br>50ms以内の連打は無効</div>
-        <div class="win-message" id="winMessage"></div>
     </div>
     <script>
         // 効果音用
